[gd_scene load_steps=23 format=3 uid="uid://cuq6u2tjmg56"]

[ext_resource type="Texture2D" uid="uid://cgsopr4mnhvlr" path="res://textures/tower_magic/magikTowerIdle-Sheet.png" id="1_bp2na"]
[ext_resource type="Script" path="res://scenes/tower_magic.gd" id="1_e5uuy"]
[ext_resource type="Texture2D" uid="uid://cxw3j5o6vaq5g" path="res://textures/tower_magic/magikTowerFire.png" id="2_5itmv"]
[ext_resource type="Texture2D" uid="uid://c17i0o311k0op" path="res://textures/tower_magic/magikTowerSpawn-Sheet.png" id="3_j06kd"]
[ext_resource type="Texture2D" uid="uid://fxaqakqum3p0" path="res://textures/attackRad.png" id="5_aov6r"]
[ext_resource type="AudioStream" uid="uid://dpv43wi61qctt" path="res://sounds/tower_attack.wav" id="6_854r1"]

[sub_resource type="AtlasTexture" id="AtlasTexture_x0tjj"]
atlas = ExtResource("1_bp2na")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_b2smf"]
atlas = ExtResource("1_bp2na")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_mruqj"]
atlas = ExtResource("1_bp2na")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_366xb"]
atlas = ExtResource("2_5itmv")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_nn5sj"]
atlas = ExtResource("3_j06kd")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_4x12h"]
atlas = ExtResource("3_j06kd")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_2pii6"]
atlas = ExtResource("3_j06kd")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_0gsxb"]
atlas = ExtResource("3_j06kd")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_af08j"]
atlas = ExtResource("3_j06kd")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_mb5dt"]
atlas = ExtResource("3_j06kd")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2h0d"]
atlas = ExtResource("3_j06kd")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ckflq"]
atlas = ExtResource("3_j06kd")
region = Rect2(896, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_rcyn2"]
atlas = ExtResource("3_j06kd")
region = Rect2(1024, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_wdq0y"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x0tjj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b2smf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mruqj")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_366xb")
}],
"loop": false,
"name": &"fire",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nn5sj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4x12h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2pii6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0gsxb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_af08j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mb5dt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2h0d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ckflq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rcyn2")
}],
"loop": false,
"name": &"spawn",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2c1ts"]
size = Vector2(134, 135)

[sub_resource type="CircleShape2D" id="CircleShape2D_spo1d"]
radius = 128.0

[node name="towerMagic" type="RigidBody2D"]
gravity_scale = 0.0
lock_rotation = true
script = ExtResource("1_e5uuy")
attack_radius = 256

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_wdq0y")
autoplay = "default"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_2c1ts")

[node name="radius" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="radiusSprite" type="Sprite2D" parent="radius"]
visible = false
texture = ExtResource("5_aov6r")

[node name="radiusCollisionShape" type="CollisionShape2D" parent="radius"]
shape = SubResource("CircleShape2D_spo1d")

[node name="damageTimer" type="Timer" parent="radius"]

[node name="attackPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_854r1")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="body_entered" from="radius" to="." method="_on_radius_body_entered"]
[connection signal="body_exited" from="radius" to="." method="_on_radius_body_exited"]
[connection signal="timeout" from="radius/damageTimer" to="." method="_on_damage_timer_timeout"]
